k3s/apps/cns_be/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cns-be
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cns-be
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
